<resources>
  <string name="app_name">Validate App</string>

  <string name="validate_screen_title">First of the few steps to set you up with the a Bank Account</string>

  <string name="pan_no">PAN NUMBER</string>

  <string name="birthdate">BIRTHDATE</string>
  <string name="date">DD</string>
  <string name="month">MM</string>
  <string name="year">YYYY</string>
  <string name="next">next</string>
  <string name="i_dont_have_pan">I don\'t have PAN</string>
  <string name="pan">PAN</string>
  <string name="validate_more">Providing PAN and Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. <a href="http://www.google.com"> Learn more</a></string>
  <string name="title">S.</string>
</resources>