<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    tools:parentTag="android.widget.LinearLayout">

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/dateLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="4dp"
      android:layout_weight="1"
      app:hintEnabled="false"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:maxLength="2"/>
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/monthLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="4dp"
      android:layout_weight="1"
      app:hintEnabled="false"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/month"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:maxLength="2"/>
  </com.google.android.material.textfield.TextInputLayout>
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/yearLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="4dp"
      android:layout_weight="2"
      app:hintEnabled="false"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:maxLength="4"/>
  </com.google.android.material.textfield.TextInputLayout>
</merge>